--- a/BMEG_310_Final_Project_P2.Rmd
+++ b/BMEG_310_Final_Project_P2.Rmd
@@ -18,16 +18,19 @@ output:
 # ============================================================================
 
 # Load required libraries
+```{r}
 library(DESeq2)
 library(pheatmap)
 library(ggplot2)
 library(cluster)
 library(survival)
 library(survminer)
-library(clusterProfiler)
-library(org.Hs.eg.db)
+#library(clusterProfiler)
+#library(org.Hs.eg.db)
 library(dplyr)
 library(tibble)
+```
+
 
 set.seed(123)
 
@@ -39,11 +42,80 @@ set.seed(123)
 # - count_matrix: raw counts (genes x samples)
 # - clinical_data: patient clinical information
 # - mutation_data: mutation status for each patient
+```{r}
+#Load the data (from lab 7)
+RNAseq_KIRC <- read.csv("RNAseq_KIRC.csv")
+data_clinical_patient <- read.delim("data_clinical_patient.txt", header = TRUE, sep = "\t", skip = 4)
+data_mutations <- read.delim("data_mutations.txt", header = TRUE, sep = "\t", stringsAsFactors = FALSE)
 
+# RNAseq: Gene names and sample IDs
+gene_names <- RNAseq_KIRC[, 1]  # First column contains gene names
+rnaseq_samples <- colnames(RNAseq_KIRC)[-1]  # Remove first column (gene names)
+cat("Number of genes in RNA-seq:", length(gene_names), "\n")
+cat("Number of RNA-seq samples:", length(rnaseq_samples), "\n")
+
+# Clinical: Patient IDs 
+clinical_patients <- data_clinical_patient$PATIENT_ID
+cat("Number of clinical patients:", length(clinical_patients), "\n")
+
+# Mutations: Unique patient IDs (multiple rows per patient possible)
+mutation_patients <- unique(data_mutations$Tumor_Sample_Barcode)
+cat("Number of patients with mutation data:", length(mutation_patients), "\n\n")
+```
 # TODO: Verify data dimensions and alignment
 # - Check that sample IDs match across all datasets
 # - Confirm no missing critical values
-# - Document sample size and gene count
+# - Document sample size and gene count - done above?
+```{r}
+#colnames(data_clinical_patient)
+#colnames(data_mutations)
+```
+
+```{r}
+# 2. Check that sample IDs match across all datasets
+cat("RNA-seq samples (first 3):\n")
+print(head(rnaseq_samples, 3))
+cat("\nClinical patients (first 3):\n")
+print(head(clinical_patients, 3))
+cat("\nMutation patients (first 3):\n")
+print(head(mutation_patients, 3))
+cat("\n")
+
+# IDs don't match, so standardize them:
+# For RNA-seq: convert periods to hyphens and extract patient ID
+rnaseq_samples_clean <- gsub("\\.", "-", rnaseq_samples)  # Replace . with -
+rnaseq_patient_ids <- substr(rnaseq_samples_clean, 1, 12)  # Get first 12 chars, remove rest
+
+# For mutations: extract patient ID (remove sample end like -01)
+mutation_patient_ids <- substr(mutation_patients, 1, 12)
+
+# Clinical IDs should already be in correct format but rename for consistency
+clinical_patient_ids <- clinical_patients
+
+# Check for missing values
+# RNA-seq:
+rnaseq_missing <- sum(is.na(RNAseq_KIRC))
+cat("Missing values in RNA-seq count matrix:", rnaseq_missing, "\n")
+
+# Clinical: Check key columns
+key_clinical_cols <- c("PATIENT_ID", "AGE", "SEX", "OS_STATUS", "OS_MONTHS", "DSS_STATUS", "DSS_MONTHS", "DFS_STATUS", "DFS_MONTHS", "PFS_STATUS", "PFS_MONTHS", "PATH_T_STAGE", "PATH_N_STAGE", "PATH_M_STAGE", "AJCC_PATHOLOGIC_TUMOR_STAGE")
+existing_cols <- key_clinical_cols[key_clinical_cols %in% colnames(data_clinical_patient)]
+
+if(length(existing_cols) > 0) {
+  for(col in existing_cols) {
+    missing_count <- sum(is.na(data_clinical_patient[[col]]) | data_clinical_patient[[col]] == "")
+    cat("Missing/empty values in", col, ":", missing_count, "\n")
+  }
+}
+
+# Mutations: Check key columns
+cat("\nMissing values in Tumor_Sample_Barcode:", sum(is.na(data_mutations$Tumor_Sample_Barcode)), "\n")
+cat("Missing/empty values in Hugo_Symbol:", sum(is.na(data_mutations$Hugo_Symbol) | data_mutations$Hugo_Symbol == ""), "\n")
+cat("Missing/empty values in Variant_Classificatoin:", sum(is.na(data_mutations$Variant_Classification) | data_mutations$Variant_Classificationl == ""), "\n")
+cat("Missing/empty values in Consequence:", sum(is.na(data_mutations$Consequence) | data_mutations$Consequence == ""), "\n")
+cat("Missing/epmty values in Impact:", sum(is.na(data_mutations$IMPACT) | data_mutations$IMPACT == ""), "\n\n")
+```
+
 
 # ============================================================================
 # STEP 2: PREPROCESSING
@@ -56,6 +128,98 @@ set.seed(123)
 # TODO: Estimate size factors
 # TODO: Extract normalized counts
 # TODO: Quality check: plot size factors, check for outliers
+```{r}
+# Create DESeq2 object from raw counts
+# Prepare count matrix (genes as rows, samples as columns)
+count_matrix <- as.matrix(RNAseq_KIRC[, -1])  # Remove gene name column
+rownames(count_matrix) <- RNAseq_KIRC[, 1]    # Set gene names as row names
+
+# Create a simple sample metadata data frame
+# For normalization, we just need a basic colData with sample names
+coldata <- data.frame(
+  sample = colnames(count_matrix),
+  condition = rep("tumor", ncol(count_matrix))  # Placeholder condition
+)
+rownames(coldata) <- coldata$sample
+
+cat("Creating DESeq2 dataset object...\n")
+cat("Count matrix dimensions:", dim(count_matrix), "\n")
+
+# Create DESeq2 dataset object
+dds <- DESeqDataSetFromMatrix(
+  countData = count_matrix,
+  colData = coldata,
+  design = ~ 1  # No DE, normalization only
+)
+cat("DESeq2 object created successfully!\n\n")
+
+# Estimate size factors
+cat("Estimating size factors...\n")
+dds <- estimateSizeFactors(dds)
+
+# Get size factors
+size_factors <- sizeFactors(dds)
+
+cat("Size factors estimated for", length(size_factors), "samples\n")
+cat("Size factor summary:\n")
+print(summary(size_factors))
+cat("\n")
+
+# Extract normalized counts
+cat("Extracting normalized counts...\n")
+normalized_counts <- counts(dds, normalized = TRUE)
+
+cat("Normalized count matrix dimensions:", dim(normalized_counts), "\n")
+cat("Example normalized counts (first 5 genes, first 3 samples):\n")
+print(normalized_counts[1:5, 1:3])
+cat("\n")
+
+sf <- sizeFactors(dds)
+
+# Boxplot of size factors
+ggplot(data.frame(sample = names(sf), size_factor = sf),
+       aes(x = "", y = size_factor)) +
+  geom_boxplot() +
+  geom_jitter(width = 0.1) +
+  labs(title = "Size Factor Distribution", y = "Size Factor", x = "") +
+  theme_bw()
+
+# Identify potential outliers (rule of thumb: +/- 2 SD)
+sf_mean <- mean(sf)
+sf_sd <- sd(sf)
+outliers <- names(sf)[abs(sf - sf_mean) > 2 * sf_sd]
+
+cat("Potential outlier samples based on size factor:\n")
+print(outliers)
+cat("\n")
+
+# 2. PCA plot (after variance stabilizing transformation)
+library(DESeq2)
+
+vsd <- vst(dds, blind = TRUE)
+
+pca_data <- plotPCA(vsd, intgroup = "condition", returnData = TRUE)
+percentVar <- round(100 * attr(pca_data, "percentVar"))
+
+ggplot(pca_data, aes(PC1, PC2)) +
+  geom_point(size = 3) +
+  labs(title = "PCA Plot", 
+       x = paste0("PC1: ", percentVar[1], "% variance"),
+       y = paste0("PC2: ", percentVar[2], "% variance")) +
+  theme_bw()
+
+# 3. Sample distance heatmap
+library(pheatmap)
+
+sample_dists <- dist(t(assay(vsd)))
+sample_dist_matrix <- as.matrix(sample_dists)
+
+pheatmap(sample_dist_matrix,
+         clustering_distance_rows = sample_dists,
+         clustering_distance_cols = sample_dists,
+         main = "Sample-to-Sample Distance Heatmap")
+
+```
 
 ## 2.2: Log-transformation
 # GOAL: Stabilize variance and make data more normally distributed
@@ -64,12 +228,194 @@ set.seed(123)
 # TODO: Quality check: compare distributions before/after log transform
 # TODO: Visualize: density plots or histograms
 
+```{r}
+# Apply log2 transformation with pseudocount (log2(x + 1))
+# Log2 transform with pseudocount to avoid log(0)
+log2_counts <- log2(normalized_counts + 1)
+
+cat("Log2 transformed count matrix dimensions:", dim(log2_counts), "\n")
+cat("Example log2 counts (first 5 genes, first 3 samples):\n")
+print(log2_counts[1:5, 1:3])
+cat("\n")
+
+# Quality check: compare distributions before/after log transform -------- CHAT GENERATED
+# Calculate summary statistics for a random sample
+set.seed(123)
+sample_gene <- sample(1:nrow(normalized_counts), 1)
+
+cat("Example gene:", rownames(normalized_counts)[sample_gene], "\n")
+cat("\nBefore log transformation (normalized counts):\n")
+print(summary(normalized_counts[sample_gene, ]))
+cat("\nAfter log transformation:\n")
+print(summary(log2_counts[sample_gene, ]))
+cat("\n")
+
+
+# TODO: Visualize: density plots or histograms
+# --------------------------------------------------
+
+cat("Generating visualization plots...\n")
+
+# Set up plotting area
+par(mfrow = c(2, 2))
+
+# Select a few random samples for visualization
+set.seed(123)
+sample_cols <- sample(1:ncol(normalized_counts), 4)
+
+# Plot 1: Density plot - Before transformation
+plot(density(normalized_counts[, sample_cols[1]]), 
+     main = "Density: Before Log Transformation",
+     xlab = "Normalized Counts",
+     ylab = "Density",
+     col = "blue",
+     lwd = 2,
+     xlim = c(0, quantile(normalized_counts, 0.99)))
+for(i in 2:4) {
+  lines(density(normalized_counts[, sample_cols[i]]), 
+        col = i, lwd = 2)
+}
+legend("topright", 
+       legend = paste("Sample", 1:4),
+       col = 1:4,
+       lwd = 2)
+
+# Plot 2: Density plot - After transformation
+plot(density(log2_counts[, sample_cols[1]]), 
+     main = "Density: After Log Transformation",
+     xlab = "Log2(Counts + 1)",
+     ylab = "Density",
+     col = "blue",
+     lwd = 2)
+for(i in 2:4) {
+  lines(density(log2_counts[, sample_cols[i]]), 
+        col = i, lwd = 2)
+}
+legend("topright", 
+       legend = paste("Sample", 1:4),
+       col = 1:4,
+       lwd = 2)
+
+# Plot 3: Histogram - Before transformation
+hist(normalized_counts[, sample_cols[1]],
+     breaks = 50,
+     main = "Histogram: Before Log Transformation",
+     xlab = "Normalized Counts",
+     ylab = "Frequency",
+     col = "lightblue",
+     border = "white",
+     xlim = c(0, quantile(normalized_counts, 0.99)))
+
+# Plot 4: Histogram - After transformation
+hist(log2_counts[, sample_cols[1]],
+     breaks = 50,
+     main = "Histogram: After Log Transformation",
+     xlab = "Log2(Counts + 1)",
+     ylab = "Frequency",
+     col = "lightgreen",
+     border = "white")
+
+par(mfrow = c(1, 1))
+
+
+# Additional comparison: Box plots across samples
+par(mfrow = c(1, 2))
+
+# Boxplot: Before (showing subset of samples for visibility)
+boxplot(normalized_counts[, sample_cols],
+        main = "Before Log Transform",
+        ylab = "Normalized Counts",
+        xlab = "Samples",
+        col = "lightblue",
+        names = paste("S", 1:4, sep = ""))
+
+# Boxplot: After
+boxplot(log2_counts[, sample_cols],
+        main = "After Log Transform",
+        ylab = "Log2(Counts + 1)",
+        xlab = "Samples",
+        col = "lightgreen",
+        names = paste("S", 1:4, sep = ""))
+
+par(mfrow = c(1, 1))
+
+
+# Check variance stabilization
+cat("\n=== Variance Stabilization Check ===\n")
+
+# Calculate mean and variance for each gene before and after transformation
+mean_before <- rowMeans(normalized_counts)
+var_before <- apply(normalized_counts, 1, var)
+
+mean_after <- rowMeans(log2_counts)
+var_after <- apply(log2_counts, 1, var)
+
+# Plot mean-variance relationship
+par(mfrow = c(1, 2))
+
+plot(log10(mean_before), log10(var_before),
+     main = "Mean-Variance: Before Log Transform",
+     xlab = "Log10(Mean)",
+     ylab = "Log10(Variance)",
+     pch = 16,
+     col = rgb(0, 0, 1, 0.3),
+     cex = 0.5)
+abline(0, 1, col = "red", lwd = 2, lty = 2)  # Reference line (variance = mean)
+
+plot(mean_after, var_after,
+     main = "Mean-Variance: After Log Transform",
+     xlab = "Mean",
+     ylab = "Variance",
+     pch = 16,
+     col = rgb(0, 1, 0, 0.3),
+     cex = 0.5)
+
+par(mfrow = c(1, 1))
+
+cat("\nLog transformation complete!\n")
+cat("Log2-transformed counts stored in 'log2_counts' object\n")
+```
+
 ## 2.3: Z-score transformation
 # GOAL: Standardize gene expression across samples
 
 # TODO: Calculate z-scores per gene (across samples)
 # TODO: Verify mean ≈ 0 and sd ≈ 1 for each gene
 # TODO: Quality check: heatmap of sample correlations
+```{r}
+## 2.3: Z-score transformation
+# GOAL: Standardize gene expression across samples
+
+#Calculate z-scores per gene (across samples)
+# Calculate z-scores: (x - mean) / sd for each gene across all samples
+# Using t() to transpose because scale() works on columns, but we want to scale rows (genes)
+z_scores <- t(scale(t(log2_counts)))
+
+cat("Z-score matrix dimensions:", dim(z_scores), "\n")
+cat("Example z-scores (first 5 genes, first 3 samples):\n")
+print(z_scores[1:5, 1:3])
+cat("\n")
+
+# Verify mean ≈ 0 and sd ≈ 1 for each gene
+# Calculate row means and row standard deviations of the z-score matrix
+row_means <- rowMeans(z_scores)
+row_sds   <- apply(z_scores, 1, sd)
+
+# Print summaries
+cat("Summary of row means (should be ~0):\n")
+print(summary(row_means))
+
+cat("\nSummary of row standard deviations (should be ~1):\n")
+print(summary(row_sds))
+
+# Optionally check the first few explicitly
+cat("\nFirst 5 row means:\n")
+print(row_means[1:5])
+
+cat("\nFirst 5 row SDs:\n")
+print(row_sds[1:5])
+```
+
 
 # CHECKPOINT: Save preprocessed expression matrix for all analyses
 
