--- a/BMEG_310_Final_Project_P2.Rmd
+++ b/BMEG_310_Final_Project_P2.Rmd
@@ -74,14 +74,14 @@ cat("Number of patients in ALL datasets:", length(common_patients), "\n")
 ```{r}
 #For the RNA seq dataset, we want to keep all the common patient columns and the ensembl gene ID (i.e.Column "X")
 # Trim the RNA sequencing dataset
-common_patients_and_X <- c(common_patients, "X")
-RNAseq_KIRC <- RNAseq_KIRC[ , gsub("\\.", "-", substr(colnames(RNAseq_KIRC), 1, 12)) %in% common_patients_and_X]
+#common_patients_and_X <- c(common_patients, "X")
+#RNAseq_KIRC <- RNAseq_KIRC[ , gsub("\\.", "-", substr(colnames(RNAseq_KIRC), 1, 12)) %in% common_patients_and_X]
 
 # Trim the clinical dataset
-data_clinical_patient <- data_clinical_patient[data_clinical_patient$PATIENT_ID %in% common_patients, ]
+#data_clinical_patient <- data_clinical_patient[data_clinical_patient$PATIENT_ID %in% common_patients, ]
 
 # Trim the mutation dataset
-data_mutations <- data_mutations[substr(data_mutations$Tumor_Sample_Barcode, 1, 12) %in% common_patients, ]
+#data_mutations <- data_mutations[substr(data_mutations$Tumor_Sample_Barcode, 1, 12) %in% common_patients, ]
 ```
 
 
@@ -121,7 +121,6 @@ cat("Missing/epmty values in Impact:", sum(is.na(data_mutations$IMPACT) | data_m
 # TODO: Create DESeq2 object from raw counts
 # TODO: Estimate size factors
 # TODO: Extract normalized counts
-# TODO: Quality check: plot size factors, check for outliers
 ```{r}
 # Create DESeq2 object from raw counts
 # Prepare count matrix (genes as rows, samples as columns)
@@ -136,7 +135,6 @@ coldata <- data.frame(
 )
 rownames(coldata) <- coldata$sample
 
-cat("Creating DESeq2 dataset object...\n")
 cat("Count matrix dimensions:", dim(count_matrix), "\n")
 
 # Create DESeq2 dataset object
@@ -148,57 +146,32 @@ dds <- DESeqDataSetFromMatrix(
 cat("DESeq2 object created successfully\n\n")
 
 # Estimate size factors
-cat("Estimating size factors...\n")
 dds <- estimateSizeFactors(dds)
 
 # Get size factors
 size_factors <- sizeFactors(dds)
-
-cat("Size factors estimated for", length(size_factors), "samples\n")
 cat("Size factor summary:\n")
 print(summary(size_factors))
 cat("\n")
 
 # Extract normalized counts
-cat("Extracting normalized counts...\n")
 normalized_counts <- counts(dds, normalized = TRUE)
-
 cat("Normalized count matrix dimensions:", dim(normalized_counts), "\n")
-cat("Example normalized counts (first 5 genes, first 3 samples):\n")
-print(normalized_counts[1:5, 1:3])
-cat("\n")
-
-sf <- sizeFactors(dds)
 ```
 
 ## 2.2: Log-transformation
 # GOAL: Stabilize variance and make data more normally distributed
 
-# TODO: Apply log2 transformation with pseudocount (log2(x + 1))
-# TODO: Quality check: compare distributions before/after log transform
-# TODO: Visualize: density plots or histograms
-
+# TODO: Apply log2 transformation with vsd
 ```{r}
-# Apply log2 transformation with pseudocount (log2(x + 1))
-# Log2 transform with pseudocount to avoid log(0)
-log2_counts <- log2(normalized_counts + 1)
+# Apply VST (recommended for >30 samples) - Applies variance-stabilizing transformation, 'blind' Ignores experimental design
+vsd <- vst(dds, blind = TRUE)
 
-cat("Log2 transformed count matrix dimensions:", dim(log2_counts), "\n")
-cat("Example log2 counts (first 5 genes, first 3 samples):\n")
-print(log2_counts[1:5, 1:3])
-cat("\n")
+# Extract the transformed counts
+vst_counts <- assay(vsd)
 
-# Quality check: compare distributions before/after log transform
-# Calculate summary statistics for a random sample
-set.seed(123)
-sample_gene <- sample(1:nrow(normalized_counts), 1)
-
-cat("Example gene:", rownames(normalized_counts)[sample_gene], "\n")
-cat("\nBefore log transformation (normalized counts):\n")
-print(summary(normalized_counts[sample_gene, ]))
-cat("\nAfter log transformation:\n")
-print(summary(log2_counts[sample_gene, ]))
-cat("\n")
+cat("VST count matrix dimensions:", dim(vst_counts), "\n")
+cat("VST value range:", range(vst_counts), "\n\n")
 ```
 
 ## 2.3: Z-score transformation
@@ -206,7 +179,6 @@ cat("\n")
 
 # TODO: Calculate z-scores per gene (across samples)
 # TODO: Verify mean ≈ 0 and sd ≈ 1 for each gene
-# TODO: Quality check: heatmap of sample correlations
 ```{r}
 ## 2.3: Z-score transformation
 # GOAL: Standardize gene expression across samples
