--- a/BMEG_310_Final_Project_P2.Rmd
+++ b/BMEG_310_Final_Project_P2.Rmd
@@ -162,12 +162,16 @@ cat("Normalized count matrix dimensions:", dim(normalized_counts), "\n")
 ## 2.2: Log-transformation
 # GOAL: Stabilize variance and make data more normally distributed
 
-# TODO: Apply log2 transformation with vsd
+# TODO: Apply log2 transformation and VST
 ```{r}
-# Apply VST (recommended for >30 samples) - Applies variance-stabilizing transformation, 'blind' Ignores experimental design
-vsd <- vst(dds, blind = TRUE)
+# simple Log2(x+1) transformation 
+log_norm_counts <- log2(normalized_counts + 1)
 
-# Extract the transformed counts
+cat("Log transform count matrix dimensions:", dim(log_norm_counts), "\n")
+cat("Log transformation range:", range(log_norm_counts), "\n\n")
+
+# Apply VST (recommended for >30 samples) - Applies variance-stabilizinvg transformation, 'blind' Ignores experimental design
+vsd <- vst(dds, blind = TRUE)
 vst_counts <- assay(vsd)
 
 cat("VST count matrix dimensions:", dim(vst_counts), "\n")
@@ -180,37 +184,17 @@ cat("VST value range:", range(vst_counts), "\n\n")
 # TODO: Calculate z-scores per gene (across samples)
 # TODO: Verify mean ≈ 0 and sd ≈ 1 for each gene
 ```{r}
-## 2.3: Z-score transformation
-# GOAL: Standardize gene expression across samples
+# Z-score the log-transformed counts (by gene)
+z_log <- t(scale(t(log_norm_counts)))
 
-#Calculate z-scores per gene (across samples)
-# Calculate z-scores: (x - mean) / sd for each gene across all samples
-# Using t() to transpose because scale() works on columns, but we want to scale rows (genes)
-z_scores <- t(scale(t(log2_counts)))
+cat("Z-scored log2 matrix dimensions:", dim(z_log), "\n")
+cat("Z-scored log2 range:", range(z_log, na.rm = TRUE), "\n\n")
 
-cat("Z-score matrix dimensions:", dim(z_scores), "\n")
-cat("Example z-scores (first 5 genes, first 3 samples):\n")
-print(z_scores[1:5, 1:3])
-cat("\n")
+# Z-score the VST-transformed counts (by gene)
+z_vst <- t(scale(t(vst_counts)))
 
-# Verify mean ≈ 0 and sd ≈ 1 for each gene
-# Calculate row means and row standard deviations of the z-score matrix
-row_means <- rowMeans(z_scores)
-row_sds   <- apply(z_scores, 1, sd)
-
-# Print summaries
-cat("Summary of row means (should be ~0):\n")
-print(summary(row_means))
-
-cat("\nSummary of row standard deviations (should be ~1):\n")
-print(summary(row_sds))
-
-# Optionally check the first few explicitly
-cat("\nFirst 5 row means:\n")
-print(row_means[1:5])
-
-cat("\nFirst 5 row SDs:\n")
-print(row_sds[1:5])
+cat("Z-scored VST matrix dimensions:", dim(z_vst), "\n")
+cat("Z-scored VST range:", range(z_vst, na.rm = TRUE), "\n\n")
 ```
 
 
